--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -2,15 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework #9</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div class="wrapper">
-      <a href="./1-gallery.html" class="link">Gallery</a>
-      <a href="./2-form.html" class="link">Form</a>
+    <a href="./index.html" class="link">Go back</a>
+    <div class="container">
+      <ul class="gallery"></ul>
     </div>
+    <script type="module" src="./js/1-gallery.js"></script>
   </body>
 </html>
